--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fontes externas</title>
+    <title>Soul Projects</title>
     <link rel="shortcut icon" href="img/favicon-16x16.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css"> 
 </head>
